--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="flex items-center gap-3">
           <div class="brand-mark" aria-hidden="true"></div>
           <div class="leading-tight">
-            <div class="brand-title">NightLoom Atlas</div>
+            <div class="brand-title">Salem Atlas</div>
             <div class="brand-sub">Private spot tracker · Salem area</div>
           </div>
         </div>
@@ -57,7 +57,6 @@
         <div class="flex items-center gap-2">
           <span class="badge">Urbex ⚫</span>
           <span class="badge">Roofing 🔴</span>
-          <span class="badge badge-muted">Invite-only</span>
         </div>
       </header>
 
@@ -79,14 +78,7 @@
         </button>
       </div>
 
-      <!-- Legend pill -->
-      <div class="legend-pill">
-        <span class="dot dot-black"></span><span>Urbex</span>
-        <span class="sep">•</span>
-        <span class="dot dot-red"></span><span>Roofing</span>
-      </div>
-
-    </div>
+  
 
     <!-- SIDE PANEL -->
     <aside id="side-panel" class="side-panel side-panel-hidden">
