--- a/index.html
+++ b/index.html
@@ -7,20 +7,6 @@
 
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="style.css" />
-
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.js"></script>
-  <script>
-    const SUPABASE_URL = "https://cljndklondjwnvktlpwc.supabase.co";
-    const SUPABASE_ANON_KEY =
-      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNsam5ka2xvbmRqd252a3RscHdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ0ODE3NjYsImV4cCI6MjA4MDA1Nzc2Nn0.41UqqhR2z2gsH_4x0Pb0fzdUzZxCWVZVw-lEil3vTOk";
-
-    window.supabaseClient = window.supabase.createClient(
-      SUPABASE_URL,
-      SUPABASE_ANON_KEY
-    );
-  </script>
-
-  <script defer src="main.js"></script>
 </head>
 
 <body class="bg-slate-950 text-slate-100">
@@ -57,180 +43,28 @@
         <div class="flex items-center gap-2">
           <span class="badge">Urbex ⚫</span>
           <span class="badge">Roofing 🔴</span>
+          <span class="badge badge-green">Construction 🟣</span>
         </div>
       </header>
 
-      <!-- Desktop Add Spot button -->
-      <button id="add-spot-desktop" class="hidden md:block desktop-action-btn" type="button">
-        Add spot
-      </button>
-
-      <!-- Mobile top bar (cleaner now) -->
+      <!-- Mobile top bar (no buttons now) -->
       <div class="md:hidden mobile-topbar">
-        <button id="add-spot-mobile" class="mobile-btn mobile-btn-amber" type="button">
-          Add spot
-        </button>
-
         <div class="mobile-title">SALEM URBEX</div>
-
-        <!-- right spacer same width as button, so title stays centered -->
-        <div class="mobile-spacer" aria-hidden="true"></div>
       </div>
 
-      <!-- SIDE PANEL -->
-      <aside id="side-panel" class="side-panel side-panel-hidden">
-        <!-- Mobile panel header with X -->
-        <div class="md:hidden panel-mobile-header">
-          <div class="panel-mobile-title">Add a spot</div>
-          <button id="panel-close" class="panel-close-btn" type="button" aria-label="Close">
-            ✕
-          </button>
-        </div>
+      <!-- Legend pill (shows on both desktop + mobile) -->
+      <div class="legend-pill" role="note" aria-label="Legend">
+        <span class="dot dot-black" aria-hidden="true"></span>
+        <span>Urbex</span>
+        <span class="sep">·</span>
 
-        <div class="panel-inner">
-          <!-- FORM -->
-          <section class="p-4 border-b border-slate-800">
-            <h2 class="hidden md:block text-base md:text-lg font-semibold mb-1">Add a spot</h2>
-            <p class="text-[11px] text-slate-400 mb-3">
-              Paste an address/coords or a Google Maps share link, then save your notes.
-            </p>
+        <span class="dot dot-red" aria-hidden="true"></span>
+        <span>Roofing</span>
+        <span class="sep">·</span>
 
-            <form id="spot-form" class="flex flex-col gap-2">
-              <div>
-                <p class="block text-xs text-slate-300 mb-1">Visit status</p>
-                <div class="flex gap-1 text-[11px]">
-                  <button type="button" class="yn-chip yn-active" data-group="status" data-value="pending">
-                    Pending visit
-                  </button>
-                  <button type="button" class="yn-chip" data-group="status" data-value="completed">
-                    Completed visit
-                  </button>
-                </div>
-                <input type="hidden" id="spot-status-hidden" value="pending" />
-              </div>
-
-              <div>
-                <label class="block text-xs text-slate-300 mb-1">Type of explore</label>
-                <select
-                  id="spot-explore"
-                  class="w-full px-3 py-2 rounded-lg bg-slate-950 border border-slate-700 text-sm outline-none focus:ring-2 focus:ring-slate-100 focus:border-slate-100"
-                >
-                  <option value="urbex">Urbex (abandoned building)</option>
-                  <option value="roofing">Roofing</option>
-                  <option value="drain">Tunnel</option>
-                  <option value="other">Not listed</option>
-                </select>
-              </div>
-
-              <div>
-                <label class="block text-xs text-slate-300 mb-1">Name</label>
-                <input
-                  type="text"
-                  id="spot-name"
-                  class="w-full px-3 py-2 rounded-lg bg-slate-950 border border-slate-700 text-sm outline-none focus:ring-2 focus:ring-slate-100 focus:border-slate-100"
-                  placeholder="Old warehouse by the tracks"
-                  required
-                />
-              </div>
-
-              <div>
-                <label class="block text-xs text-slate-300 mb-1">Location / link</label>
-                <input
-                  type="text"
-                  id="spot-location"
-                  class="w-full px-3 py-2 rounded-lg bg-slate-950 border border-slate-700 text-sm outline-none focus:ring-2 focus:ring-slate-100 focus:border-slate-100"
-                  placeholder="Address, coords, plus code, or Maps link"
-                  required
-                />
-              </div>
-
-              <div>
-                <label class="block text-xs text-slate-300 mb-1">Status of place</label>
-                <select
-                  id="spot-tier"
-                  class="w-full px-3 py-2 rounded-lg bg-slate-950 border border-slate-700 text-sm outline-none focus:ring-2 focus:ring-slate-100 focus:border-slate-100"
-                >
-                  <option value="graffiti_no_power">Graffiti (no power)</option>
-                  <option value="graffiti_power">Graffiti (power)</option>
-                  <option value="no_graffiti">No graffiti (power)☠️</option>
-                </select>
-              </div>
-
-              <div id="rating-section" class="text-[11px] mt-1 hidden">
-                <p class="text-slate-300 mb-1">Rating (1–5) & would go again</p>
-                <div class="flex items-center gap-2 mb-1">
-                  <div class="flex gap-1 flex-1">
-                    <button type="button" class="rating-chip" data-value="1">1</button>
-                    <button type="button" class="rating-chip" data-value="2">2</button>
-                    <button type="button" class="rating-chip" data-value="3">3</button>
-                    <button type="button" class="rating-chip" data-value="4">4</button>
-                    <button type="button" class="rating-chip" data-value="5">5</button>
-                  </div>
-                  <span class="text-[10px] text-slate-500">optional</span>
-                </div>
-                <div class="flex gap-1">
-                  <button type="button" class="yn-chip" data-group="again" data-value="yes">Would go again</button>
-                  <button type="button" class="yn-chip yn-active" data-group="again" data-value="no">Wouldn’t go again</button>
-                </div>
-              </div>
-
-              <div class="grid grid-cols-2 gap-2 text-[11px]">
-                <div>
-                  <p class="mb-1 text-slate-300">Security / cameras</p>
-                  <div class="flex gap-1">
-                    <button type="button" class="yn-chip" data-group="security" data-value="yes">Yes</button>
-                    <button type="button" class="yn-chip yn-active" data-group="security" data-value="no">No / unknown</button>
-                  </div>
-                </div>
-                <div>
-                  <p class="mb-1 text-slate-300">Squatters</p>
-                  <div class="flex gap-1">
-                    <button type="button" class="yn-chip" data-group="squatters" data-value="yes">Yes / likely</button>
-                    <button type="button" class="yn-chip yn-active" data-group="squatters" data-value="no">No / unlikely</button>
-                  </div>
-                </div>
-              </div>
-
-              <input type="hidden" id="spot-security" value="no" />
-              <input type="hidden" id="spot-squatters" value="no" />
-              <input type="hidden" id="spot-again" value="no" />
-              <input type="hidden" id="spot-rating" value="0" />
-
-              <div>
-                <label class="block text-xs text-slate-300 mb-1">Notes (optional)</label>
-                <textarea
-                  id="spot-notes"
-                  rows="2"
-                  class="w-full px-3 py-2 rounded-lg bg-slate-950 border border-slate-700 text-sm outline-none focus:ring-2 focus:ring-slate-100 focus:border-slate-100"
-                  placeholder="Access, vibe, hazards, best time to go..."
-                ></textarea>
-              </div>
-
-              <button
-                type="submit"
-                id="submit-btn"
-                class="mt-2 inline-flex items-center justify-center gap-2 px-3 py-2 text-sm font-medium rounded-xl bg-slate-100 text-slate-900 hover:bg-white transition"
-              >
-                Save spot
-              </button>
-
-              <p id="save-status" class="text-[11px] text-slate-400 mt-1 hidden"></p>
-            </form>
-          </section>
-
-          <!-- LIST -->
-          <section class="p-4">
-            <div class="flex items-center justify-between mb-2">
-              <h3 class="text-sm font-semibold">Added spots</h3>
-              <button id="refresh-spots" type="button" class="text-[11px] px-2 py-1 rounded-lg border border-slate-700 text-slate-200 hover:bg-slate-900">
-                Refresh
-              </button>
-            </div>
-
-            <div id="spots-list" class="space-y-2"></div>
-          </section>
-        </div>
-      </aside>
+        <span class="dot dot-green" aria-hidden="true"></span>
+        <span>Construction</span>
+      </div>
 
     </div>
   </div>
