--- a/index.html
+++ b/index.html
@@ -43,27 +43,13 @@
         <div class="flex items-center gap-2">
           <span class="badge">Urbex ⚫</span>
           <span class="badge">Roofing 🔴</span>
-          <span class="badge badge-green">Construction 🟣</span>
+          <span class="badge badge-purple">Construction 🟣</span>
         </div>
       </header>
 
       <!-- Mobile top bar (no buttons now) -->
       <div class="md:hidden mobile-topbar">
         <div class="mobile-title">SALEM URBEX</div>
-      </div>
-
-      <!-- Legend pill (shows on both desktop + mobile) -->
-      <div class="legend-pill" role="note" aria-label="Legend">
-        <span class="dot dot-black" aria-hidden="true"></span>
-        <span>Urbex</span>
-        <span class="sep">·</span>
-
-        <span class="dot dot-red" aria-hidden="true"></span>
-        <span>Roofing</span>
-        <span class="sep">·</span>
-
-        <span class="dot dot-green" aria-hidden="true"></span>
-        <span>Construction</span>
       </div>
 
     </div>
